#Alteração da paleta de cores

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </ul>
       </section>
       <!-- Inserir imagem divisória novamente -->
-      <div class="img-div"></div>
+      <div class="img-div" id="img-div2"></div>
 
       <!-- Aqui é a sessão dos produtos da padaria -->
       <section id="featured-products">
